--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+ErrorDocument 404   /404.html
+
 RewriteEngine on
 
 
@@ -7,4 +9,3 @@ RewriteRule ^ /%1 [NC,L,R]
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^ %{REQUEST_URI}.html [NC,L]
 
-ErrorDocument 404 /error.html
